@@ -5,7 +5,7 @@ dnl distribution information.
 
 AC_PREREQ(2.59)
 
-AC_INIT(courier, 0.66.3, [courier-users@lists.sourceforge.net])
+AC_INIT(courier, 0.66.3.20110619, [courier-users@lists.sourceforge.net])
 version=$PACKAGE_VERSION
 AC_CONFIG_SRCDIR(courier/courier.c)
 AM_INIT_AUTOMAKE
@@ -324,4 +324,4 @@ AC_SUBST(REPOSITORY)
 echo $real_configure_args >configure.args
 AC_CONFIG_SUBDIRS(afx gdbmobj bdbobj cgi http11 numlib soxwrap md5 sha1 libhmac random128 unicode rfc822 rfc1035 rfc2045 liblock maildir waitlib threadlib makedat tcpd rootcerts imap maildrop ldapaddressbook gpglib pcp webmail webadmin courier)
 
-AC_OUTPUT(Makefile courier.spec courier.lpspec dbobj.h dbobj.config courier.sysvinit)
+AC_OUTPUT(Makefile courier.spec courier.lpspec courier.service dbobj.h dbobj.config courier.sysvinit)
