@@ -1,3 +1,11 @@
+2011-06-19  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Fix gcc 4.6 warnings
+
+	* courier.spec.in: switch to systemd. Remove script used when
+	upgrading from ancient pre-sysconftool versions.
+
+
 2011-06-14  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* courier/smtpaccess.config: Set RELAYCLIENT for IPv6 localhost address.
